<resources>
    <string name="app_name">SignInGoogle</string>
    <string name="signout">SignOut</string>
    <string name="quiz_app">QUIZ APP</string>
    <string name="take_quiz">Take Quiz</string>

    <string name="facebook_app_id">1086077561554483</string>
    <string name="fb_login_protocol_scheme">fb1086077561554483</string>

    <string name="title_activity_categories">Categories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="search">Search</string>
    <string name="category_name">Category Name</string>
    <string name="play_now">Play Now</string>
    <string name="follow">Follow</string>
    <string name="info">Info</string>
</resources>
