<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_local_bar_black_24dp"
            android:title="@string/leaderboard" />
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>


    <group>
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>


</menu>
