<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".taketest.StartQuiz">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar_layout" />


    <LinearLayout
        android:id="@+id/questionSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_9sdp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_bg"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    style="@style/margin"
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/question_mark" />

                <TextView
                    android:id="@+id/question"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Question"
                    android:textSize="@dimen/_15sdp" />

                <Spinner
                    android:id="@+id/spinner"
                    style="@style/margin"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_9sdp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_bg"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    style="@style/margin"
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_19sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/difficult_icon" />

                <TextView
                    android:id="@+id/bestScore2"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Difficulty"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/difficultLevel"
                    style="@style/margin"
                    android:gravity="center"

                    android:text="Easy"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



            </LinearLayout>



        </androidx.cardview.widget.CardView>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/testSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_9sdp"
            android:layout_weight="2"

            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_bg"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    style="@style/margin"
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_19sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:id="@+id/time"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Time"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/timeQuiz"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_9sdp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_bg"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    style="@style/margin"
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_19sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/trophy_cup" />

                <TextView
                    android:id="@+id/bestScore"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Best Score"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/playnowlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/playnow"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/success_btn"
            android:text="@string/play_now"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="top|center_horizontal|end"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_72sdp"
            android:layout_marginRight="@dimen/_72sdp"
            android:src="@drawable/ic_play_arrow_black_24dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_62sdp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <Button
                android:id="@+id/bfollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginLeft="@dimen/_19sdp"

                android:layout_marginEnd="@dimen/_19sdp"
                android:layout_weight="1"

                android:background="@drawable/success_btn"

                android:drawableStart="@drawable/ic_add_circle_black_24dp"
                android:drawableLeft="@drawable/ic_add_circle_black_24dp"
                android:padding="@dimen/_10sdp"

                android:text="@string/follow"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/binfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginLeft="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_19sdp"
                android:layout_weight="1"
                android:background="@drawable/success_btn"
                android:drawableStart="@drawable/info_icon"
                android:drawableLeft="@drawable/info_icon"

                android:padding="@dimen/_10sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:text="@string/info"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </LinearLayout>

    </FrameLayout>


</LinearLayout>